force-app/main/default/objects/Audit_Trail__c/Audit_Trail__c.object-meta.xml
<CustomObject>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Audit Trail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>