force-app/main/default/objects/Audit_Trail__c/fields/Audit_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Audit ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>