force-app/main/default/objects/Audit_Trail__c/fields/Handled__c.field-meta.xml
<CustomField>
    <fullName>Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handled</label>
    <type>Checkbox</type>
</CustomField>