force-app/main/default/objects/Audit_Trail__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>TextArea</type>
</CustomField>