force-app/main/default/objects/Audit_Trail__c/fields/Performed_On__c.field-meta.xml
<CustomField>
    <fullName>Performed_On__c</fullName>
    <label>Performed On</label>
    <type>DateTime</type>
</CustomField>