force-app/main/default/objects/Audit_Trail__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>80</length>
    <type>Text</type>
</CustomField>